// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolTip Component snapshots should match snapshot 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover on me
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 2`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={[Function]}
  onMouseEnter={null}
  onMouseLeave={null}
>
  <div
    className="c0"
    onClick={[Function]}
    onMouseEnter={null}
    onMouseLeave={null}
  >
    <span>
      Click me
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 3`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={[Function]}
  onMouseEnter={null}
  onMouseLeave={null}
>
  <div
    className="c0"
    onClick={[Function]}
    onMouseEnter={null}
    onMouseLeave={null}
  >
    <span>
      Click me
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 4`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 5`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 6`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 7`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;

exports[`ToolTip Component snapshots should match snapshot 8`] = `
.c0 {
  display: inline-block;
  position: relative;
}

<ToolTip__TriggerWrapper
  onClick={null}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c0"
    onClick={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span>
      Hover
    </span>
  </div>
</ToolTip__TriggerWrapper>
`;
